--- a/todo-phase1/src/App.css
+++ b/todo-phase1/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+body{
+  background-color: whitesmoke;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-list{
+  background-color: white;
+  margin: auto;
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 1px solid #030527;
+  box-shadow:
+    /*The top layer of shadow*/
+    0 1px 1px rgba(4, 188, 212, 0.15),
+    /*The second layer*/
+    0 10px 0 -5px rgb(38, 144, 231),
+    /*The second layer shadow*/
+    0 10px 1px -4px rgba(4, 188, 212, 0.15),
+    /* the third layer */
+    0 20px 0 -10px rgb(38, 144, 231),
+    /*The third layer shadow*/
+    0 20px 1px -9px rgba(4, 188, 212, 0.15);
+    padding: 30px;
+
+
+}
+.todo-item{
+  display:flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 30px 20px 0;
+  width:70%;
+  border-bottom: 1px solid #e67b7b;
+  font-family: Roboto, sans-serif;
+  font-weight: 100;
+  font-size: 15px;
+  color: #0fc7be;
 }
 
-.App-link {
-  color: #61dafb;
+input[type=checkbox]{
+  margin-right: 10px;
+  font-size: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type=checkbox]:focus{
+  outline: 0;
 }
