--- a/meme-gen/src/App.css
+++ b/meme-gen/src/App.css
@@ -1,40 +1,48 @@
-body{
+body {
   margin: 0;
   background-color: whitesmoke;
 }
 
-header{
+header {
   height: 100px;
   display: flex;
   align-items: center;
-  background: #6441A5; /*fallback for old browsers*/
-  background: -webkit-linear-gradient(to right, #2a0845, #6441A5); /*Chrome 10-25, Safari 5.5.6*/
-  background: linear-gradient(to right, #2a0845, #6441A5) /**W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+
+  background: #6441a5; /*fallback for old browsers*/
+  background: -webkit-linear-gradient(
+    to right,
+    #2a0845,
+    #6441a5
+  ); /*Chrome 10-25, Safari 5.5.6*/
+  background: linear-gradient(
+    to right,
+    #2a0845,
+    #6441a5
+  ); /**W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+
   , Opera 12+, Safari 7+ */
 }
-header > img{
+header > img {
   height: 80%;
-  margin-left: 10%
+  margin-left: 10%;
 }
 
-header > p{
+header > p {
   font-family: VT323, monospace;
   color: whitesmoke;
   font-size: 50px;
   margin-left: 60px;
 }
 
-.meme{
+.meme {
   position: relative;
   width: 90%;
   margin: auto;
 }
 
-.meme > img{
+.meme > img {
   width: 100%;
 }
 
-.meme > h2{
+.meme > h2 {
   position: absolute;
   width: 80%;
   text-align: center;
@@ -47,35 +55,28 @@ header > p{
   text-transform: uppercase;
   color: white;
   letter-spacing: 1px;
-  text-shadow: 
-    2px 2px 0 #000,
-    -2px -2px 0 #000,
-    2px -2px 0 #000,
-    -2px 2px 0 #000,
-    0 2px 0 #000,
-    2px 0 0 #000,
-    0 -2px 0 #000,
-    -2px 0 0 #000,
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+    -2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000,
     2px 2px 5px #000;
 }
-.meme > .bottom{
+.meme > .bottom {
   bottom: 0;
 }
-.meme > .top{
+.meme > .top {
   top: 0;
 }
-.meme-form{
+.meme-form {
   width: 90%;
   margin: 20px auto;
   display: flex;
   justify-content: space-between;
 }
 
-.meme-form > input{
+.meme-form > input {
   width: 45%;
   height: 40px;
 }
-.meme-form > button{
+.meme-form > button {
   border: none;
   font-family: VT323, monospace;
   font-size: 25px;
@@ -84,19 +85,19 @@ header > p{
   background: #6441a5;
 }
 
-.meme-form > input::-webkit-input-placeholder{
+.meme-form > input::-webkit-input-placeholder {
   font-family: VT323, monospace;
   font-size: 25px;
   text-align: cen;
 }
 
-.meme-form > input::-moz-placeholder{
+.meme-form > input::-moz-placeholder {
   font-family: VT323, monospace;
   font-size: 25px;
   text-align: cen;
 }
 
-.meme-form > input::-ms-input-placeholder{
+.meme-form > input::-ms-input-placeholder {
   font-family: VT323, monospace;
   font-size: 25px;
   text-align: cen;
